fix photo names

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class = "slide-border"> </div> 
             <div id = "about-content-box">
                 <div id = "pic-box">
-                    <img id = "stacks" class = "about-me-pic" src = "assets/img/karina1.jpg">
+                    <img id = "stacks" class = "about-me-pic" src = "assets/img/karina_about.jpg">
                 </div>
                 <div id = "bio-box">
                     <div id = "hi-text">
