update work desc

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                  <div id = "links">
                     <a href = "https://www.facebook.com/kgoot" target = "_blank"><img class = "link" src = "assets/img/icons/facebook.png"></a>
                     <a href = "https://www.instagram.com/thegootlife/" target = "_blank"> <img class = "link" src = "assets/img/icons/instagram.png"> </a>
-                     <a href = "https://www.linkedin.com/in/jung-naomi/" target = "_blank"> <img class = "link" src = "assets/img/icons/linkedin.png"> </a> 
-                     <a href = "mailto:naomi.jung16@gmail.com"><img class = "link" src = "assets/img/icons/email.png"></a> 
-                     <a href = "assets/docs/Naomi_Jung_Resume.pdf" target = "_blank"><img class = "link" src = "assets/img/icons/resume.png"></a>   
+                     <a href = "https://www.linkedin.com/in/kgoot/" target = "_blank"> <img class = "link" src = "assets/img/icons/linkedin.png"> </a> 
+                     <a href = "mailto:kgoot@berkeley.edu"><img class = "link" src = "assets/img/icons/email.png"></a> 
+                     <a href = "assets/docs/Karina_Goot_Resume.pdf" target = "_blank"><img class = "link" src = "assets/img/icons/resume.png"></a>   
                 </div>
             </div>
         
@@ -169,7 +169,7 @@
             <div class = "slide-border"> </div> 
             <div id = "#work-content-container">
                 <div id = "comp-pic-box">
-                    <img id = "stacks" class = "about-me-pic" src = "assets/img/google.png" style='height: 60%; width: 60%'alt=""/>
+                    <a href = "https://cloud.google.com/compute/sla" target = "_blank"> <img id = "stacks" class = "about-me-pic" src = "assets/img/google.png" style='height: 60%; width: 60%'alt=""/> </a>
                 </div>
                 <div id = "work-box">
                     <div id = "company-text">
@@ -179,7 +179,7 @@
                         Site Reliability Engineering Intern
                     </div>
                     <div id = "bio-text">
-                        Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah
+                        My team was working on compiling and analyzing Service Level Objectives (<a href = "https://en.wikipedia.org/wiki/Service_level_objective">SLOs</a>) for different services at Google. My summer project involved building a tool that analyzed per-minute data of every service in the SLO repository and defined a notification mechanism about service-level agreement (SLA) violations to service-owners.
                     </div>
                 </div>   
             </div>
@@ -189,7 +189,7 @@
             <div class = "slide-border"> </div> 
             <div id = "#work-content-container">
                 <div id = "comp-pic-box">
-                    <img id = "stacks" class = "about-me-pic" src = "assets/img/kpcb.png" style='height: 60%; width: 60%'alt=""/>
+                    <a href = "http://kpcbfellows.com/" target = "_blank"> <img id = "stacks" class = "about-me-pic" src = "assets/img/kpcb.png" style='height: 60%; width: 60%'alt=""/> </a>
                 </div>
                 <div id = "work-box">
                     <div id = "company-text">
@@ -199,7 +199,7 @@
                         Software Engineering Intern
                     </div>
                     <div id = "bio-text">
-                        Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah
+                        I participated in the <a href = "http://kpcbfellows.com/"> KPCB Engineering Fellows</a> program for technology and entreprenourship. As part of the program, I interned at <a href = "https://www.coursera.org/"> Coursera</a>, where I built as assignment submission system where submissions persist across multile student sessions making the learner expereince more seamless. 
                     </div>
                 </div>   
             </div>
@@ -209,7 +209,7 @@
             <div class = "slide-border"> </div> 
             <div id = "#work-content-container">
                 <div id = "comp-pic-box">
-                    <img id = "stacks" class = "about-me-pic" src = "assets/img/tidepool.jpg" style='height: 60%; width: 60%'alt=""/>
+                    <a href = "https://tidepool.org/" target = "_blank"> <img id = "stacks" class = "about-me-pic" src = "assets/img/tidepool.jpg" style='height: 60%; width: 60%'alt=""/> </a>
                 </div>
                 <div id = "work-box">
                     <div id = "company-text">
@@ -219,7 +219,7 @@
                         Software Engineering Intern
                     </div>
                     <div id = "bio-text">
-                        Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah
+                        <a href = "https://tidepool.org/"> Tidepool</a> is an open source, not-for-profit company focused on liberating data from diabetes devices. As an intern I worked on building a fake diabetes data generator to fit Tidepool's data model.
                     </div>
                 </div>   
             </div>
@@ -229,17 +229,17 @@
             <div class = "slide-border"> </div> 
             <div id = "#work-content-container">
                 <div id = "comp-pic-box">
-                    <img id = "stacks" class = "about-me-pic" src = "assets/img/nib.png" style='height: 60%; width: 60%'alt=""/>
+                    <a href = "https://nib.berkeley.edu/" target = "_blank"> <img id = "stacks" class = "about-me-pic" src = "assets/img/nib.png" style='height: 60%; width: 60%'alt=""/> </a>
                 </div>
                 <div id = "work-box">
                     <div id = "company-text">
                         Net Impact Berkeley
                     </div>
                     <div id = "title-text">
-                        Site Reliability Engineering Intern
+                        VP Consulting // VP Associate Development // Project Manager
                     </div>
                     <div id = "bio-text">
-                        Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah
+                        <a href = "https://nib.berkeley.edu/"> Net Impact </a> is a consulting organization at UC Berkeley focused on consulting for social good. Over my time with the club, I worked on a variety of projects ranging from a go-to-market strategy for a multi million dollar sustainable food startup to a revenue maximization strategy for a nationwide girls' nonprofit.
                     </div>
                 </div>   
             </div>
