--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <script>
         function myFunction(x) {
             x.classList.toggle("change");
-            document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+            // document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
         }
         </script>
         <div class = "title-header-container">
@@ -378,19 +378,19 @@
         <br>
 
         <!-- Footer -->
-            <footer class="wrapper style3 align-center">
-                <div class="inner">
-                    <ul class="icons">
-                        <li><a href="https://www.facebook.com/kgoot" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-                        <li><a href="https://www.instagram.com/thegootlife/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                        <li><a href="https://www.linkedin.com/in/kgoot/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                        <li><a href="mailto:kgoot@berkeley.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-                        <li><a href="https://github.com/kgoot/" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-                        <li><a href="assets/docs/Karina_Goot_Resume.pdf"" class="icon style2 fa-pencil"><span class="label">resume</span></a></li>
-                    </ul>
-                </div>
-            </footer>
-        </section>
+        <footer class="wrapper style3 align-center">
+            <div class="inner">
+                <ul class="icons">
+                    <li><a href="https://www.facebook.com/kgoot" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+                    <li><a href="https://www.instagram.com/thegootlife/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/kgoot/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="mailto:kgoot@berkeley.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="https://github.com/kgoot/" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+                    <li><a href="assets/docs/Karina_Goot_Resume.pdf"" class="icon style2 fa-pencil"><span class="label">resume</span></a></li>
+                </ul>
+            </div>
+        </footer>
+    </section>
 
     <div id = "footer" style = "padding-top: 20px; font-size:12px;"> © 2018 <a href = "https://kgoot.github.io"> Karina Goot </a>. All Rights Reserved. </div>
 
