disc0 slides + minor css fixes

--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                 </div>
                 
                 <div id = "links-margin"> </div> 
-                <div id="links-box">
-                    <div id = "links">
-                        <a href = "https://www.facebook.com/kgoot" target = "_blank"><img class = "link" src = "assets/img/icons/facebook.png"></a>
-                        <a href = "https://www.instagram.com/thegootlife/" target = "_blank"> <img class = "link" src = "assets/img/icons/instagram.png"> </a>
-                        <a href = "https://www.linkedin.com/in/kgoot/" target = "_blank"> <img class = "link" src = "assets/img/icons/linkedin.png"> </a> 
-                        <a href = "mailto:kgoot@berkeley.edu"><img class = "link" src = "assets/img/icons/email.png"></a> 
-                        <a href = "assets/docs/Karina_Goot_Resume.pdf" target = "_blank"><img class = "link" src = "assets/img/icons/resume.png"></a>   
-                    </div>
-                </div>
-                <br>
-                <br>        
+                <!-- <div class="inner"> -->
+                     <div id="links-box">
+                    <ul class="icons style2">
+                        <li><a href="https://www.facebook.com/kgoot" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="https://www.instagram.com/thegootlife/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="https://www.linkedin.com/in/kgoot/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="mailto:kgoot@berkeley.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+                        <li><a href="https://github.com/kgoot/" class="icon style2 fa-github"><span class="label">Github</span></a></li>
+                        <li><a href="assets/docs/Karina_Goot_Resume.pdf"" class="icon style2 fa-pencil"><span class="label">resume</span></a></li>
+                    </ul>
+                </div>   
                 <div id = "scroll-margin"> </div> 
                 <div id = "scroll-box">
                     <div id = "scroll-textbox">
@@ -178,7 +178,7 @@
                     <br>
                 </div>   
             </div>
-        </div>
+        </div>       
     </section>
 
     <!-- WORK PAGE -->
@@ -376,6 +376,7 @@
                         Weekly Discussion Slides
                     </div>
                     <div id = "teaching-text">
+                        <b>Discussion 0: </b> <a href = "https://docs.google.com/presentation/d/1-ucxAbc0Guc2ZKu5MxeTQTRR_w7Z4CV22szqnPvIo9A/edit?usp=sharing"> Lost on the Moon </a>  <br>
                         <b>Week 1: </b> Coming soon <br>
                         <b>Week 2: </b> Coming soon <br>
                         <b>Week 3: </b> Coming soon <br>
@@ -404,32 +405,24 @@
     </section>
 
 
-    <!-- Final Thoughts -->
-    <section class="wrapper style1 align-center" >
-        <div class = "outer-container"> 
-            <div class = "slide-border"> </div> 
-            <div class = "card-header-container">
-                <img class = "card-title" src = "assets/img/headers/contact.png">
-            </div>
-        </div>
         <br>
-
-        <!-- Footer -->
-        <footer class="wrapper style3 align-center">
-            <div class="inner">
-                <ul class="icons">
-                    <li><a href="https://www.facebook.com/kgoot" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-                    <li><a href="https://www.instagram.com/thegootlife/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                    <li><a href="https://www.linkedin.com/in/kgoot/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="mailto:kgoot@berkeley.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-                    <li><a href="https://github.com/kgoot/" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-                    <li><a href="assets/docs/Karina_Goot_Resume.pdf"" class="icon style2 fa-pencil"><span class="label">resume</span></a></li>
-                </ul>
+        <div class = "outer-container"> 
+            <div id="teaching-title-text">
+                <center> Interested in working together? Let's get in touch! <br> </center>
             </div>
-        </footer>
-    </section>
+            
+            <br>
+            <ul class="icons style3">
+                <li><a href="https://www.facebook.com/kgoot" class="icon style3 fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="https://www.instagram.com/thegootlife/" class="icon style3 fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="https://www.linkedin.com/in/kgoot/" class="icon style3 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="mailto:kgoot@berkeley.edu" class="icon style3 fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="https://github.com/kgoot/" class="icon style3 fa-github"><span class="label">Github</span></a></li>
+                <li><a href="assets/docs/Karina_Goot_Resume.pdf"" class="icon style3 fa-pencil"><span class="label">resume</span></a></li>
+            </ul>
 
-    <div id = "footer" style = "padding-top: 20px; font-size:12px;"> © 2018 <a href = "https://kgoot.github.io"> Karina Goot </a>. All Rights Reserved. </div>
-
+            <div id = "footer" style = "padding-top: 20px; font-size:12px;"> © 2018 <a href = "https://kgoot.github.io"> Karina Goot </a>. All Rights Reserved. </div>
+        </div>
+ 
 </body>
 </html>
