update resume, add ds100

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <a href = "#about"> about </a>
                     <a href = "#work"> work </a> 
                     <a href = "#projects"> projects </a> 
-                    <a href = "#cs61a"> cs61a </a>
+                    <a href = "#cs61a"> teaching </a>
                 </div>
                 <div id = "nav-underline-about"> </div>
             </div>
@@ -217,6 +217,26 @@
             <div class = "slide-border"> </div> 
             <div id = "#work-content-container">
                 <div id = "comp-pic-box">
+                    <a href = "https://tidepool.org/" target = "_blank"> <img id = "stacks" class = "about-me-pic" src = "assets/img/berkeley.png" style='height: 60%; width: 60%'alt=""/> </a>
+                </div>
+                <div id = "work-box">
+                    <div id = "company-text">
+                        UC Berkeley EECS Department
+                    </div>
+                    <div id = "title-text">
+                        UGSI for Data Science 100 and Computer Science 61A
+                    </div>
+                    <div id = "bio-text">
+                        In spring 2018, I am teaching two courses: <a href = "http://www.ds100.org/sp18//"> Principles and Techniques for Data Science</a> (ds100) and <a href = "https://tidepool.org/"> Structures and Interpretations of Computer Programs</a> (cs61a). Instruction includes running weekly lab and discussion sections, creating course and exam materials and holding office hours.
+                    </div>
+                </div>   
+            </div>
+        </div>
+        <br>
+        <div class = "outer-container"> 
+            <div class = "slide-border"> </div> 
+            <div id = "#work-content-container">
+                <div id = "comp-pic-box">
                     <a href = "http://kpcbfellows.com/" target = "_blank"> <img id = "stacks" class = "about-me-pic" src = "assets/img/kpcb.png" style='height: 60%; width: 60%'alt=""/> </a>
                 </div>
                 <div id = "work-box">
@@ -272,6 +292,10 @@
                 </div>   
             </div>
         </div>
+        <br>
+        <center>
+            For more information, please see my <a href="assets/docs/Karina_Goot_Resume.pdf"> complete resume</a>. 
+        </center>
     </section>
 
     <!-- PROJECTS PAGE -->
@@ -335,6 +359,22 @@
         <div class = "outer-container"> 
             <div class = "slide-border"> </div> 
             <div class = "card-header-container">
+                <img class = "card-title" src = "assets/img/headers/teaching.png">
+            </div>
+        </div>
+
+         <div id = "contact-container">
+                <div id = "contact-margin"></div>
+                <div id = "contact-blurb">
+                        I am currently TA'ing two courses at UC Berkeley. All relevant course resources will be posted here.
+                </div>
+        </div>
+
+        <br>
+
+        <div class = "outer-container"> 
+            <div class = "slide-border"> </div> 
+            <div class = "card-header-container">
                 <img class = "card-title" src = "assets/img/headers/cs61a.png">
             </div>
         </div>
@@ -361,7 +401,7 @@
                         <b>Discussion: </b> Disc # 122, Thursday 3:30pm - 5:00pm  @ <a href = "https://http://www.lib.berkeley.edu/doemoff/pdfs/moff_1.pdf"> 106 Moffit Library </a> <br>
                         <b>Office Hours:</b> TBD <br>
                         <b><a href = "https://calendar.google.com/calendar/selfsched?sstoken=UVBNMDIyci1XMndQfGRlZmF1bHR8M2I2YWUwMjdhYTkyODI2ODI4NWVlYWQzY2I1ODJmMDc"> Book an Appointment </a> </b> <br>
-                        <b> <a href = "https://cs61a.org/"> Submit anonymous feedback </a> </b> <br>
+                        <b> <a href = "https://goo.gl/forms/hddMaCUOYSaerEZe2"> Submit anonymous feedback </a> </b> <br>
                         <b> Email: </b> kgoot [at] berkeley [dot] edu
 
                     </div>
@@ -402,6 +442,42 @@
                 </div>   
             </div>
         </div>
+
+        <div class = "outer-container"> 
+            <div class = "slide-border"> </div> 
+            <div class = "card-header-container">
+                <img class = "card-title" src = "assets/img/headers/ds100.png">
+            </div>
+        </div>
+
+         <div id = "contact-container">
+                <div id = "contact-margin"></div>
+                <div id = "contact-blurb">
+                        Welcome to <a href = "http://www.ds100.org/sp18/syllabus"> DS100</a>! In the Spring 2018 semester, I will be teaching one discussion section and one lab section. <br>
+                        You can find relevant section resources and advice here.
+                </div>
+        </div>
+        <div class = "contact-container"> 
+            <div class = "slide-border"> </div> 
+            <div id = "#teaching-content-container">
+                <div id = "teaching-box">
+                    <div id = "teaching-title-text">
+                        Teaching Info
+                    </div>
+                    <div id = "teaching-text">
+                        <b>Lab: </b> Lab # 110, Monday 12:00pm - 1:00pm @ <a href = "http://www.berkeley.edu/map?cory"> 105 Cory Hall </a> <br>
+                        <b>Discussion: </b> Disc # 110, Friday 12:00pm - 1:00pm  @ <a href = "http://www.berkeley.edu/map?wheeler"> 220 Wheeler </a> <br>
+                        <b>Office Hours:</b> TBD <br>
+                        <b><a href = "https://calendar.google.com/calendar/selfsched?sstoken=UVBNMDIyci1XMndQfGRlZmF1bHR8M2I2YWUwMjdhYTkyODI2ODI4NWVlYWQzY2I1ODJmMDc"> Book an Appointment </a> </b> <br>
+                        <b> <a href = "https://goo.gl/forms/hddMaCUOYSaerEZe2"> Submit anonymous feedback </a> </b> <br>
+                        <b> Email: </b> kgoot [at] berkeley [dot] edu
+
+                    </div>
+                </div>   
+            </div>
+        </div>
+
+        <br>
     </section>
 
 
