adding slides thru week 3

--- a/index.html
+++ b/index.html
@@ -417,9 +417,13 @@
                     </div>
                     <div id = "teaching-text">
                         <b>Discussion 0: </b> <a href = "https://docs.google.com/presentation/d/1-ucxAbc0Guc2ZKu5MxeTQTRR_w7Z4CV22szqnPvIo9A/edit?usp=sharing"> Lost on the Moon </a>  <br>
-                        <b>Week 1: </b> Coming soon <br>
+                        <b>Discussion 1: </b> <a href = "https://docs.google.com/presentation/d/1V9sGr6fRiC037DkwrnG5l1x3rvZK94_OCHOI3tUcKYA/edit#slide=id.p"> Control + Higher Order Functions </a>  <br>
+                        <b>Discussion 2: </b> <a href = "https://docs.google.com/presentation/d/1Lkh7oN23w1nbVPw0Dm_WEysGSDq-YymT6wwbzZZ-v78/edit#slide=id.g1c57dcb87e_1_31"> Envrionment Diagrams + Recursion </a>  <br>
+                        <b> Midterm Review Slides: </b> Coming Soon! <br>
+                        <b>Discussion 3: </b> <a href = "https://docs.google.com/presentation/d/1Qsu2RqRdvCGM5T5O3FdzPZMDOkUcnNh44MhSLiTdH-A/edit">Lists and Sequences </a>  <br>
+                        <!-- <b>Week 1: </b> Coming soon <br>
                         <b>Week 2: </b> Coming soon <br>
-                        <b>Week 3: </b> Coming soon <br>
+                        <b>Week 3: </b> Coming soon <br> -->
                     </div>
                 </div>   
             </div>
