--- a/index.html
+++ b/index.html
@@ -419,8 +419,11 @@
                         <b>Discussion 0: </b> <a href = "https://docs.google.com/presentation/d/1-ucxAbc0Guc2ZKu5MxeTQTRR_w7Z4CV22szqnPvIo9A/edit?usp=sharing"> Lost on the Moon </a>  <br>
                         <b>Discussion 1: </b> <a href = "https://docs.google.com/presentation/d/1V9sGr6fRiC037DkwrnG5l1x3rvZK94_OCHOI3tUcKYA/edit#slide=id.p"> Control + Higher Order Functions </a>  <br>
                         <b>Discussion 2: </b> <a href = "https://docs.google.com/presentation/d/1Lkh7oN23w1nbVPw0Dm_WEysGSDq-YymT6wwbzZZ-v78/edit#slide=id.g1c57dcb87e_1_31"> Envrionment Diagrams + Recursion </a>  <br>
-                        <b> Midterm Review Slides: </b> Coming Soon! <br>
                         <b>Discussion 3: </b> <a href = "https://docs.google.com/presentation/d/1Qsu2RqRdvCGM5T5O3FdzPZMDOkUcnNh44MhSLiTdH-A/edit">Lists and Sequences </a>  <br>
+                        <b>Discussion 4: </b> <a href = "https://docs.google.com/presentation/d/1hS6WWb1EGpCO1U_80qeFoBTbPGgdFjkbV71FU_DwGzA/edit#slide=id.p">Mutation</a>  <br>
+                        <b>Discussion 5: </b> <a href = "https://docs.google.com/presentation/d/1BF20pulZEF4xk_FMjQ-w4B-GsZehEQeRpZ0z2i0Vr2s/edit#slide=id.g1cc1b9cfc1_0_0">Object Oriented Programming </a>  <br>
+                        <b>Discussion 6: </b> <a href = "https://docs.google.com/presentation/d/1o-1CnpQKQOlAvs2KSZC5LwFlHFjxdoFV4GePuy-T_tA/edit#slide=id.p">Orders of Growth </a>  <br>
+                        <b>Discussion 7: </b> Coming Soon! <br>
                         <!-- <b>Week 1: </b> Coming soon <br>
                         <b>Week 2: </b> Coming soon <br>
                         <b>Week 3: </b> Coming soon <br> -->
