--- a/index.html
+++ b/index.html
@@ -423,10 +423,12 @@
                         <b>Discussion 4: </b> <a href = "https://docs.google.com/presentation/d/1hS6WWb1EGpCO1U_80qeFoBTbPGgdFjkbV71FU_DwGzA/edit#slide=id.p">Mutation</a>  <br>
                         <b>Discussion 5: </b> <a href = "https://docs.google.com/presentation/d/1BF20pulZEF4xk_FMjQ-w4B-GsZehEQeRpZ0z2i0Vr2s/edit#slide=id.g1cc1b9cfc1_0_0">Object Oriented Programming </a>  <br>
                         <b>Discussion 6: </b> <a href = "https://docs.google.com/presentation/d/1o-1CnpQKQOlAvs2KSZC5LwFlHFjxdoFV4GePuy-T_tA/edit#slide=id.p">Orders of Growth </a>  <br>
-                        <b>Discussion 7: </b> Coming Soon! <br>
-                        <!-- <b>Week 1: </b> Coming soon <br>
-                        <b>Week 2: </b> Coming soon <br>
-                        <b>Week 3: </b> Coming soon <br> -->
+                        <b>Discussion 7: </b> <a href = "https://docs.google.com/presentation/d/1Ieh7SAhel8O9iWXErc9qgAblxETJBmzcG5acRoYkaBs/edit?usp=sharing">Scheme </a>  <br>
+                        <b>Extra Slides: </b> <a href = "https://docs.google.com/presentation/d/1wCkaa8TYucVWeUiDbRZPK35RS-LN873cdZEbzuGkrDc/edit?usp=sharing"> Iterators + Streams </a>  <br>
+                        <b>Discussion 8: </b> <a href = "https://docs.google.com/presentation/d/1C0ieLthgQoA7nugb4lqWbcF3TczxCtcUwpst01XszU4/edit?usp=sharing">Interpreters </a>  <br>
+                        <b>Discussion 10: </b> <a href = "https://docs.google.com/presentation/d/1BIW-GXQ_RnAcOsSVFk6ZYpg4J3lt9CY2FU9WAYrKvNg/edit?usp=sharing">SQL</a>  <br>
+                        <b>Discussion 11: </b> <a href = "https://docs.google.com/presentation/d/1BXgBMiraHrM8YZI44OtkKZA1ohnakgwwSO3RjUI4gm0/edit?usp=sharing">Final Dicussion </a>  <br>
+                        <b>Review: </b> <a href = "https://docs.google.com/presentation/d/16K80TBcUyfJzSHKXBcRkNen7axSC3x1zEpoQAZDro0I/edit#slide=id.p">Scheme Final Review </a>  <br>
                     </div>
                 </div>   
             </div>
@@ -474,7 +476,7 @@
                     <div id = "teaching-text">
                         <b>Lab: </b> Lab # 110, Monday 12:00pm - 1:00pm @ <a href = "http://www.berkeley.edu/map?cory"> 105 Cory Hall </a> <br>
                         <b>Discussion: </b> Disc # 110, Friday 12:00pm - 1:00pm  @ <a href = "http://www.berkeley.edu/map?wheeler"> 220 Wheeler </a> <br>
-                        <b>Office Hours:</b> TBD <br>
+                        <b>Office Hours:</b> 324 Evans Monday 1-2 <br>
                         <b><a href = "https://calendar.google.com/calendar/selfsched?sstoken=UVBNMDIyci1XMndQfGRlZmF1bHR8M2I2YWUwMjdhYTkyODI2ODI4NWVlYWQzY2I1ODJmMDc"> Book an Appointment </a> </b> <br>
                         <b> <a href = "https://goo.gl/forms/hddMaCUOYSaerEZe2"> Submit anonymous feedback </a> </b> <br>
                         <b> Email: </b> kgoot [at] berkeley [dot] edu
